chore: update README and add pyinstaller package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pre-commit>=4.5.1",
+    "pyinstaller>=6.19.0",
     "pyright>=1.1.408",
     "ruff>=0.15.2",
 ]
