refactor: migrate to src layout to fix case-insensitive fs collision
Move Fushi/ package into src/ to avoid naming conflict between the
`fushi` entry script and `Fushi/` package directory on Windows, where
the file system is case-insensitive.

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,6 +1,7 @@
 {
     "venvPath": ".",
     "venv": ".venv",
+    "extraPaths": ["src"],
     "exclude": [
         ".venv",
         "**/node_modules",
