feat(bench): add benchmark script and plotting utilities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pythonpath = ["src"]
 
 [dependency-groups]
 dev = [
+    "matplotlib>=3.10.8",
+    "numpy>=2.4.2",
     "pre-commit>=4.5.1",
     "pyinstaller>=6.19.0",
     "pyright>=1.1.408",
