--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -8,5 +8,6 @@
         "**/__pycache__",
         "**/.*"
     ],
-    "typeCheckingMode": "basic"
+    "typeCheckingMode": "basic",
+    "pythonVersion": "3.14"
 }
