--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,8 @@ dev = [
     "pre-commit>=4.5.1",
     "pyinstaller>=6.19.0",
     "pyright>=1.1.408",
+    "requests>=2.32.5",
     "ruff>=0.15.2",
+    "tqdm>=4.67.3",
+    "zstandard>=0.25.0",
 ]
